--- a/.github/workflows/test.yml.in
+++ b/.github/workflows/test.yml.in
@@ -79,8 +79,9 @@ jobs:
 
       - name: Install and configure poetry
         run: |
-          python -m pip install poetry
+          python -m pip install poetry==1.4
           poetry config virtualenvs.in-project true
+          poetry config installer.modern-installation false
 
       - name: Cache the virtualenv
         uses: actions/cache@v3
