--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -139,6 +139,9 @@ jobs:
           # this is to fix GIT not liking owner of the checkout dir
           chown -R $(id -u):$(id -g) $PWD
 
+      - name: Install poetry
+        run: python -m pip install poetry==1.4
+
       - name: Configure poetry
         run: |
           poetry config virtualenvs.in-project true
