--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -287,7 +287,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: bump-version
     container:
-      image: ghcr.io/hpcflow/centos7-poetry:py3.10.9_po1.4.2
+      image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
       - uses: actions/checkout@v3
         with:
