--- a/.github/workflows/test_pre_python.yml.in
+++ b/.github/workflows/test_pre_python.yml.in
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          - "latest"
+          - "3.12-dev"
         os:
           - ubuntu-latest
           - macos-latest
