--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -2,6 +2,7 @@ name: build-exes
 
 env:
   PYTHON_VERSION_BUILD_EXES: "3.11"
+  POETRY_VERSION: "1.4"
 
 on:
   workflow_dispatch:
@@ -56,7 +57,7 @@ jobs:
           key: {% raw %}venv-build-windows-latest-${{ hashFiles('**/poetry.lock') }}{% endraw %}
 
       - name: Install poetry
-        run: python -m pip install poetry==1.4
+        run: python -m pip install poetry=={% raw %}${{ env.POETRY_VERSION }}{% endraw %}
 
       - name: Configure poetry
         run: |
@@ -143,7 +144,7 @@ jobs:
           key: {% raw %}venv-build-macos-latest-${{ hashFiles('**/poetry.lock') }}{% endraw %}
 
       - name: Install poetry
-        run: python -m pip install poetry==1.4
+        run: python -m pip install poetry=={% raw %}${{ env.POETRY_VERSION }}{% endraw %}
 
       - name: Configure poetry
         run: |
