--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -556,7 +556,7 @@ jobs:
       - name: Update doc version switcher
         run: |
           curl https://raw.githubusercontent.com/{{ org }}/{{ repo }}/{% raw %}${{ github.ref_name }}{% endraw %}/docs/make_vers_switcher.py --output docs/make_vers_switcher.py
-          python docs/make_vers_switcher.py
+          python docs/make_vers_switcher.py {{ docs_url_prefix }}
 
       - name: Push changes
         run: |
