--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -362,8 +362,81 @@ jobs:
           name: {{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux-dir.zip
           path: {{ pyinstaller_dir }}/dist/onedir/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux-dir.zip
 
+  make-workflow-benchmark:
+    needs: bump-version
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+          - "3.8"
+          - "3.12"
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest      
+        num_elements: 
+          - 1
+          - 100
+          - 10000
+          - 1000000
+    runs-on: {% raw %}${{ matrix.os }}{% endraw %}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: {% raw %}${{ github.ref }}{% endraw %}
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: {% raw %}${{ matrix.python-version }}{% endraw %}
+
+      - name: Install and configure poetry
+        run: |
+          python -m pip install poetry=={% raw %}${{ env.POETRY_VERSION }}{% endraw %}
+          poetry config virtualenvs.in-project true
+          poetry config installer.modern-installation false
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v4
+        with:
+          path: ./.venv
+          key: {% raw %}${{ runner.os }}-test-${{ matrix.python-version }}-venv-${{ hashFiles('**/poetry.lock') }}{% endraw %}
+
+      - name: Install dependencies
+        run: |
+          poetry install --without dev,pyinstaller
+
+      - name: Run app make workflow command
+        run: |
+          poetry run {{ executable_name }} --timeit-file benchmark_make_workflow_{% raw %}${{ matrix.num_elements }}{% endraw %}_elements-{% raw %}${{ runner.os }}-py-${{ matrix.python-version }}.txt{% endraw %} make {{ benchmark_make_workflow }} --var N {% raw %}${{ matrix.num_elements }}{% endraw %}
+
+      - uses: actions/upload-artifact@v4
+        with:
+            name: {% raw %}benchmark_make_workflow_${{ matrix.num_elements }}_elements-${{ runner.os }}-py-${{ matrix.python-version }}.txt{% endraw %}
+            path: {% raw %}benchmark_make_workflow_${{ matrix.num_elements }}_elements-${{ runner.os }}-py-${{ matrix.python-version }}.txt{% endraw %}
+
+  make-workflow-benchmark-upload:
+    needs: make-workflow-benchmark
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: {% raw %}${{ github.ref }}{% endraw %}
+      - run: |
+          mkdir benchmarks
+      - uses: actions/download-artifact@v4
+        with: 
+          merge-multiple: true
+          path: benchmarks
+      - name: zip benchmark results
+        run: |
+          zip -r ./benchmarks.zip benchmarks
+      - uses: actions/upload-artifact@v4
+        with:             
+          name: benchmarks.zip
+          path: benchmarks.zip
+
   release-github-PyPI:
-    needs: [bump-version, build-executables, build-executables-linux]
+    needs: [bump-version, build-executables, build-executables-linux, make-workflow-benchmark-upload]
     runs-on: ubuntu-latest
     outputs:
       binary_download_links: {% raw %}${{ steps.get_binary_download_links.outputs.binary_download_links }}{% endraw %}
@@ -422,6 +495,7 @@ jobs:
             **/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-win-dir.zip
             **/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-macOS-dir.zip
             **/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux-dir.zip
+            benchmarks.zip
           prerelease: {{ '${{' }} github.event.pull_request.base.ref == '{{ pre_release_branch }}' {{ '}}' }}
 
       - name: Release info
