fix: include benchmarks in GH release

--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -377,8 +377,7 @@ jobs:
         num_elements: 
           - 1
           - 100
-          - 10000
-          - 1000000
+          - 10000          
     runs-on: {% raw %}${{ matrix.os }}{% endraw %}
     steps:
       - uses: actions/checkout@v4
@@ -495,7 +494,7 @@ jobs:
             **/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-win-dir.zip
             **/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-macOS-dir.zip
             **/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux-dir.zip
-            benchmarks.zip
+            **/benchmarks.zip
           prerelease: {{ '${{' }} github.event.pull_request.base.ref == '{{ pre_release_branch }}' {{ '}}' }}
 
       - name: Release info
