--- a/.github/workflows/benchmark.yml.in
+++ b/.github/workflows/benchmark.yml.in
@@ -14,7 +14,7 @@ on:
         default: '[1, 10, 100, 1000, 10000]'
       platform:
         description: "Which OS to use."
-        default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+        default: '["ubuntu-latest", "macos-13", "windows-latest"]'
 
 jobs:
   make-workflow-benchmark:
