--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -285,6 +285,9 @@ jobs:
   build-executables-linux:
     runs-on: ubuntu-latest
     needs: bump-version
+    env:
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: "true"
+      ACTIONS_RUNNER_FORCE_ACTIONS_NODE_VERSION: node16    
     container:
       image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
